syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.salesforce.cantor.grpc.objects";
option java_outer_classname = "Objects";
option objc_class_prefix = "ObjectsProtos";

package com.salesforce.cantor.grpc.objects;

message VoidResponse {}

message NamespacesRequest {}

message NamespacesResponse {
    repeated string namespaces = 1;
}

// objects.create()
message CreateRequest {
    string namespace = 1;
}

// objects.drop()
message DropRequest {
    string namespace = 1;
}

// objects.entries()
message KeysRequest {
    string namespace = 1;
    int32 start = 2;
    int32 count = 3;
}

message KeysResponse {
    repeated string keys = 1;
}

// objects.get(1)
message GetRequest {
    string namespace = 1;
    string key = 2;
}

message GetResponse {
    bytes value = 1;
}

// objects.store(1)
message StoreRequest {
    string namespace = 1;
    string key = 2;
    bytes value = 3;
}

// objects.delete(1)
message DeleteRequest {
    string namespace = 1;
    string key = 2;
}

message DeleteResponse {
    bool result = 1;
}

// objects.size()
message SizeRequest {
    string namespace = 1;
}

message SizeResponse {
    int32 size = 1;
}

service ObjectsService {
    rpc namespaces (NamespacesRequest) returns (NamespacesResponse) {}
    rpc create (CreateRequest) returns (VoidResponse) {}
    rpc drop (DropRequest) returns (VoidResponse) {}
    rpc keys (KeysRequest) returns (KeysResponse) {}
    rpc get (GetRequest) returns (GetResponse) {}
    rpc store (StoreRequest) returns (VoidResponse) {}
    rpc delete (DeleteRequest) returns (DeleteResponse) {}
    rpc size (SizeRequest) returns (SizeResponse) {}
}

